backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: fastapi-backend
          image: your-username/product-api:latest # REPLACE THIS
          ports:
            - containerPort: 8000
          # Handling the .env file from compose:
---
apiVersion: v1
kind: Service
metadata:
  name: backend # This name is critical; frontend uses it to talk to backend
spec:
  selector:
    app: backend
  ports:
    - protocol: TCP
      port: 8000 # The port inside the cluster
      targetPort: 8000 # The port the container listens on
  type: ClusterIP # Internal only
