ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: main-ingress
  annotations:
    tailscale.com/expose: "true"
spec:
  ingressClassName: tailscale
  rules:
  - http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            # We add .default.svc.cluster.local to force it out of 127.0.0.1
            name: backend.default.svc.cluster.local 
            port:
              number: 8000
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend.default.svc.cluster.local
            port:
              number: 80
